[package]
name = "klavier-jack"
version = "0.1.8-beta.1"
edition = "2021"
description = "Jack library of klavier."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/klavier-jack"
homepage = "https://github.com/ruimo/klavier-jack"
repository = "https://github.com/ruimo/klavier-jack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klavier-helper = "0.1.4"
#klavier-helper = { path = "../klavier-helper" }
klavier-core = "0.1.3"
#klavier-core = { path = "../klavier-core" }
jack = "^0"
error-stack = "^0"
once_cell = "^1"
tracing = "^0"

[workspace]
members = [
    "examples/*",
]
